# BMSTU-OS

./: README.md
lab_01/: DISAM.txt  TEMP.txt  lab_01.drawio  lab_12.drawio  lab_13.drawio  lab_14.drawio  report.docx  sub.drawio
lab_03/: CMakeLists.txt  Makefile  task1.c  task2.c  task3.c  task4.c  task5.c
lab_03/queue/: main.c  sl_list.c  sl_list.h
lab_03/stack/: const.h  sl_list.h  stack.c  stack.h
lab_04/: CMakeLists.txt  Makefile  main.c
lab_05/: CMakeLists.txt
lab_05/pc/: main.c  pc.c  pc.h
lab_05/rw/: main.c  rw.c  rw.h
lab_06/: CMakeLists.txt  bakery.h  bakery.x  bakery_client  bakery_client.c  bakery_server  bakery_server.c
sem_1/lab_03/: Makefile  task1.c  task2.c  task5.c
sem_1/lab_03/queue/: err.c  err.h  queues.c  queues.h  queues_io.c  queues_io.h
sem_1/lab_03/stack/: calc.c  calc.h  err.c  err.h  main.c  sl_list.c
sem_2/lab_01/: CMakeLists.txt
sem_2/lab_01/task_0/: a.out  main.c
sem_2/lab_01/task_1/: client  client.c  config.h  server  server.c
sem_2/lab_02/: CMakeLists.txt  Makefile  client  client.c  server  server.c  tmp
sem_2/lab_02/task_0/: main.c
sem_2/lab_02/task_1/: Makefile  client.c  config.h  server.c
sem_2/lab_02/task_2/: client.c  config.h  server.c
sem_2/lab_02/task_3/: client.c  config.h  server.c
sem_2/lab_03/: a.out  a2.out  a_info.txt  a_info2.txt  info.txt  info2.txt  main.c  main2.c
sem_2/lab_04/: main.c
sem_2/lab_05/: Makefile  Module.symvers  md.h  md1.c  md1.ko  md2.c  md2.ko  md3.c  md3.ko
sem_2/lab_06/: fortune.c
sem_2/lab_07/: seqfile.c
sem_2/lab_08/: vfs.c
(+43 files in other folders)
