project(lab_02)

add_executable(task_0
        task_0/main.c)

add_executable(task_1
        task_1/server.c
        task_1/client.c
        task_1/config.h)

add_executable(task_2
        task_2/server.c
        task_2/client.c
        task_2/config.h)

add_executable(task_3
        task_3/server.c
        task_3/client.c
        task_3/config.h)